# arigram

./: .gitignore  BUGS.md  Dockerfile  README.md  TODO  TODO.md  arigram.desktop  check.sh  do  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml  main.yml
arigram/: __init__.py  __main__.py  colours.py  config.py  controllers.py  exceptions.py  models.py  msg.py  tdlib.py  update_handlers.py  utils.py  views.py
