[tool.poetry]
name = "arigram"
version = "0.1.6"
description = "A fork of tg -- a hackable telegram TUI client"
authors = ["TruncatedDinosour <ari.web.xyz@gmail.com>"]
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/TruncatedDinosour/arigram"
repository = "https://github.com/TruncatedDinosour/arigram"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram = "^0.16.0"
pyfzf = "^0.2.2"
pyperclip = "^1.8.2"

[tool.poetry.scripts]
arigram = "arigram.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
